--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,10 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
+    height: 100vh;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    overflow: hidden;
 }
 
 header {
@@ -16,10 +20,8 @@ h1 {
     margin: 0;
 }
 
-.container {
-    width: 80%;
-    margin: auto;
-    overflow: hidden;
+main {
+    overflow: auto;
 }
 
 footer {
