--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,8 @@
     </header>
     <main>
         <p>This is the home page of the application.</p>
+        <p>This is the home page of the application.</p>
+        <p>This is the home page of the application.</p>
     </main>
     <footer>
         <p>&copy; 2023 Your Company</p>
