add instruction page

--- a/views/layouts/editor.ejs
+++ b/views/layouts/editor.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <%- include("../partials/headStandart.ejs")  %>
+    <%- include("../partials/headEditor.ejs")  %>
 </head>
 <body>
     <header>
