--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,2 +1,8 @@
 <h1>Home</h1>
-<a href="/getAddInstructionPage">Add New Instruction</a>
+<div>
+    <a href="/getAddInstructionPage">Add New Instruction</a>
+</div>
+
+<div>
+    <a href="/getListInstructionsPage">View Instructions</a>
+</div>
