--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -5,7 +5,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to <%= title %></h1>
+        <h1>Welcome to <a href="/"><%= title %></a></h1>
     </header>
 
     <main>
