excel files to read started & substances added

--- a/views/listInstructions.ejs
+++ b/views/listInstructions.ejs
@@ -6,6 +6,7 @@
             <p><%= instruction.description %></p>
             <a href="/getEditInstructionPage/<%= instruction._id %>">Edit</a>
             <a href="/getShowInstructionPage/<%= instruction._id %>">Show</a>
+            <a href="/getDeleteInstructionPage/<%= instruction._id %>">Delete</a>
         </div>
     <% }); %>
 </div>
