--- a/views/addInstruction.ejs
+++ b/views/addInstruction.ejs
@@ -3,7 +3,7 @@
     <form id="instructionForm">
         <div class="form-group">
             <label for="number">Number</label>
-            <input type="number" id="number" name="number" required>
+            <input type="text" id="number" name="number" required>
         </div>
         
         <div class="form-group">
