--- a/views/editInstruction.ejs
+++ b/views/editInstruction.ejs
@@ -57,7 +57,7 @@
         let contentBase64 = btoa(encodeURIComponent(content));
 
         try {
-            const response = await fetch('/api/updateInstruction', {
+            const response = await fetch('/api/instructions/update', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ 
@@ -71,7 +71,7 @@
             
             if (response.ok) {
                 let instruction = await response.json();
-                window.location.href = `/getShowInstructionPage/${instruction._id}`;
+                window.location.href = `/admin/instructions/show/${instruction._id}`;
             }
         } catch (error) {
             console.error('Error:', error);
