edit substance page

--- a/views/editInstruction.ejs
+++ b/views/editInstruction.ejs
@@ -1,9 +1,9 @@
 <div class="container">
-    <h1>Add New Instruction</h1>
+    <h1>Edit Instruction</h1>
     <form id="instructionForm">
         <div class="form-group">
             <label for="number">Number</label>
-            <input type="number" id="number" name="number" required>
+            <input type="text" id="number" name="number" required>
         </div>
 
         <div class="form-group">
