--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,3 +52,78 @@ footer {
 .instructionCard:hover {
     background-color: #ffd9ad;
 } 
+
+
+.gridContainerSubstances {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 20px;
+    padding: 20px;
+}
+
+.substanceCard {
+    background: white;
+    border: 0px solid white;
+    border-radius: 10px;
+    padding: 15px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+}
+
+.substanceCard p {
+    padding: 0 10px;
+    margin: 5px 5px;
+    word-break: break-all;
+}
+
+.substanceCard .reactsWithWater {
+    color: white;
+    padding: 10px;
+    background-color: rgb(178, 65, 65);
+}
+
+.substanceCard .polimerization {
+    color: white;
+    padding: 10px;
+    background-color: rgb(0, 8, 162);
+}
+
+.substanceCard .isToxic {
+    color: white;
+    padding: 10px;
+    background-color: rgb(54, 54, 54);
+}
+
+а {
+    color: orange;
+    text-decoration: none;
+    text-decoration-line: none;
+    text-decoration-style: none;
+}
+
+а:link {
+    color: orange;
+    text-decoration: none;
+    text-decoration-line: none;
+    text-decoration-style: none;
+}
+
+а:link {
+    color: green;
+    text-decoration: none;
+    text-decoration-line: none;
+    text-decoration-style: none;
+}
+
+а:active {
+    color: darkgrey;
+    text-decoration: none;
+    text-decoration-line: none;
+    text-decoration-style: none;
+}
+
+а:visited {
+    color: orange;
+    text-decoration: none;
+    text-decoration-line: none;
+    text-decoration-style: none;
+}
