--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -11,4 +11,8 @@
     <div>
         <a href="/admin/substances">List Substances</a>
     </div>
+
+    <div>
+        <a href="/admin/exportData">Export data</a>
+    </div>
 </div>
