--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,4 +1,4 @@
-<h1>Home</h1>
+<h1>Admin panel</h1>
 <div class="dashboardContainer">
     <div>
         <a href="/admin/instructions/add">Add New Instruction</a>
@@ -13,6 +13,7 @@
     </div>
 
     <div>
-        <a href="/admin/exportData">Export data</a>
+        <a href="/admin/data/export">Export data</a>
     </div>
+
 </div>
